<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">云端书城</string>
    <string name="hello_world">Hello world!</string>

    <!-- 主界面底部导航栏文字配置 -->
    <string name="main_selected">精选</string>
    <string name="main_classify">分类</string>
    <string name="main_search">搜索</string>
    <string name="main_bookshelf">书架</string>
    <string name="main_more">更多</string>

    <!-- 更多界面文字配置 -->

    <string name="more_topic">主题设置</string>
    <string name="more_book_updatetype">图书更新类型</string>
    <string name="more_service_update">后台自动更新</string>
    <string name="more_unlock">解锁功能</string>
    <string name="more_read_statistics">阅读统计</string>
    <string name="more_password_protect">密码保护</string>
    <string name="more_user_feedback">用户反馈</string>
    <string name="more_update">检查版本更新</string>
    <string name="more_bottom_thinks">感谢您使用 云端书城\n版本号: </string>

    <!-- 搜索界面文字配置 -->
    <string name="search_book_hint_text">请输入书名关键字或作者</string>
    <string name="search_book_button_change">换一换</string>

    <!-- 书的详请Diaolog文字配置 -->
    <string name="dialog_book_summary">内容简介:</string>

    <!-- 搜索历史记录popupwindow文字配置 -->
    <string name="popup_search_book_clear">清除历史记录</string>
    <string name="popup_search_book_cancel">关闭</string>
    <string name="titlebar_search">搜索</string>

    <!-- 主题界面文字配置 -->
    <string name="theme_color_choice">主题颜色选择</string>
    <string name="theme_auto_night">自动夜晚模式</string>
    <string name="theme_auto_loading">联动缓存章节</string>
    <string name="theme_default_cover">默认封面</string>
    <string name="theme_touch_time">触发时间段19:00 - 7:00</string>
    <string name="theme_touch_loading">在线看书，网络环境良好的时，开启则不显示加载提示框，滑动流畅。网络不好时可以关闭，显示加载提示框，防止应用程序无响应出现！</string>

    <!-- 主题界面文字配置 -->
    <string name="baidu_book_download">下载</string>
    <string name="baidu_book_evaluation">豆瓣评书</string>

    <!-- 反馈界面文字配置 -->
    <string name="feedback_theme_text">主题</string>
    <string name="feedback_theme_text_questtion_type">问题</string>
    <string name="feedback_attach_info">附加信息</string>
    <string name="feedback_attach_text">选择反馈附件（图片）</string>
    <string name="feedback_device_info">设备信息</string>
    <string name="feedback_device">设备</string>
    <string name="feedback_device_ios">Android</string>
    <string name="feedback_app_info">应用信息</string>
    <string name="feedback_app_name">名字</string>
    <string name="feedback_app_versioncode">版本</string>
    <string name="feedback_app_build">Build</string>

    <!-- 反馈主题界面文字配置 -->
    <string name="feedback_theme_question">问题</string>
    <string name="feedback_theme_require">需求</string>
    <string name="feedback_theme_bug">程序错误报告</string>
    <string name="feedback_theme_other">其他</string>

    <!-- 阅读统计界面文字配置 -->
    <string name="read_staticis_text">清除阅读时间统计记录</string>

    <!-- 密码保护计界面文字配置 -->
    <string name="password_open_text">开启密码</string>
    <string name="password_close_text">修改密码</string>
    <string name="password_protected_instruction">设置密码,充分保护隐私,但是如何您忘记密码,
               只通过系统设置里清除缓存来实现解锁，届时您的所有下载的书籍及阅读书签、设置将被删除。</string>
    <string name="password_input_text">输入你的密码</string>
    <string name="network_error_text">网络不佳,请检查网络后,下拉刷新试试</string>

</resources>