<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <include layout="@layout/titlebar_layout" />

    <TextView
        android:id="@+id/password_open"
        style="@style/read_staticis_text_style"
        android:layout_marginTop="150dp"
        android:background="@drawable/feedback_bg_selector"
        android:text="@string/password_open_text"
        android:textColor="@android:color/background_dark" />

    <View
        style="@style/feedback_line_style"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/password_close"
        style="@style/read_staticis_text_style"
        android:background="@drawable/feedback_bg_selector"
        android:text="@string/password_close_text" />

    <View
        style="@style/feedback_line_style"
        android:layout_marginLeft="20dp" />

    <TextView
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:padding="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/password_protected_instruction"
        android:textSize="15sp" />

</LinearLayout>