<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:more="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="15dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/baidu_book_image"
                android:layout_width="95dp"
                android:layout_height="132dp"
                android:background="@android:color/white"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/baidu_book_author"
                    style="@style/Dialog_text_style"
                    android:layout_marginTop="3dp" />

                <TextView
                    android:id="@+id/baidu_book_statue"
                    style="@style/Dialog_text_style"
                    android:layout_marginTop="4dp" />

                <TextView
                    android:id="@+id/baidu_book_category"
                    style="@style/Dialog_text_style"
                    android:layout_marginTop="4dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/baidu_book_download"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:text="@string/baidu_book_download"
                        android:textColor="@android:color/white"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/baidu_book_evaluation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:text="@string/baidu_book_evaluation"
                        android:textColor="@android:color/white"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <ScrollView
            android:id="@+id/baidu_summary_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fadingEdge="none"
            android:scrollbars="none" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dialog_book_textcolor"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <com.himoo.ydsc.ui.view.MoreTextView
                    android:id="@+id/baidu_book_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="10dp"
                    more:maxLine="5"
                    more:textColor="@color/dialog_book_textcolor"
                    more:textSize="14sp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>